[gd_scene load_steps=21 format=2]

[ext_resource path="res://art/UI/MenuNShit/title.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/CustomCamera2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/UI/MenuNShit/button.png" type="Texture" id=3]
[ext_resource path="res://src/UI/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://art/fonts/VT323/VT323-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://art/UI/MenuNShit/keys/space.png" type="Texture" id=6]
[ext_resource path="res://art/UI/MenuNShit/keys/A.png" type="Texture" id=7]
[ext_resource path="res://art/UI/MenuNShit/keys/S.png" type="Texture" id=8]
[ext_resource path="res://art/UI/MenuNShit/keys/W.png" type="Texture" id=9]
[ext_resource path="res://art/UI/MenuNShit/keys/D.png" type="Texture" id=10]
[ext_resource path="res://art/UI/MenuNShit/keys/escape.png" type="Texture" id=11]
[ext_resource path="res://sound/hit/vibrating-thud-39536 (mp3cut.net).mp3" type="AudioStream" id=12]
[ext_resource path="res://src/Music/Music.tscn" type="PackedScene" id=13]

[sub_resource type="GDScript" id=4]
script/source = "extends TextureButton




func _on_PlayButton_pressed():
	SceneChanger.change_scene(\"res://src/Board/Board.tscn\")
"

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="GDScript" id=5]
script/source = "extends TextureButton


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="Animation" id=2]
length = 2.3
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 163.5, -160 ), Vector2( 163.5, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "request_shake_big"
}, {
"args": [  ],
"method": "request_shake_small"
}, {
"args": [  ],
"method": "request_shake_small"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayButton:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -150, 144 ), Vector2( 208, 144 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ExitButton:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 550, 216 ), Vector2( 208, 216 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Controls:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.8, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GameBy:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.8, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HitPlayer:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.3, 0.7, 0.9, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "float"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Controls/WalkControls:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1.46409, 0.615572 ),
"update": 0,
"values": [ Vector2( 0, -9 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Controls/WalkControls2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1.46409, 0.63728 ),
"update": 0,
"values": [ Vector2( 0, 78 ), Vector2( 0, 86 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Controls/WalkControls3:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 1 ),
"transitions": PoolRealArray( 1.41421, 0.615572 ),
"update": 0,
"values": [ Vector2( 0, 142 ), Vector2( 0, 150 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "start"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 163.5, -160 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayButton:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -150, 144 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExitButton:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 550, 216 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Controls:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GameBy:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control" groups=["Shakers"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
mouse_filter = 2
color = Color( 0.0941176, 0.0156863, 0.0156863, 1 )

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.5
margin_right = 92.5
margin_bottom = 128.0
texture = ExtResource( 1 )
expand = true

[node name="PlayButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -144.0
margin_right = 48.0001
margin_bottom = -88.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 4
script = SubResource( 4 )

[node name="Label" type="Label" parent="PlayButton"]
margin_right = 96.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "START"
align = 1
valign = 1

[node name="ExitButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -72.0
margin_right = 47.9998
margin_bottom = -16.0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = SubResource( 5 )

[node name="Label2" type="Label" parent="ExitButton"]
margin_right = 96.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "EXIT"
align = 1
valign = 1

[node name="CustomCamera2D" parent="." instance=ExtResource( 2 )]
anchor_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/appear = SubResource( 2 )
anims/float = SubResource( 7 )
anims/start = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="GameBy" type="Label" parent="."]
margin_left = 16.0
margin_top = 104.0
margin_right = 168.0
margin_bottom = 216.0
custom_colors/font_color = Color( 0.576471, 0.0392157, 0.0392157, 1 )
custom_fonts/font = SubResource( 6 )
text = "By team \"Hoydalka\":
alorthius
Ade0n
BearSafari
iamthewalrus67"
align = 1

[node name="Controls" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -94.0
margin_right = -40.0
margin_bottom = 74.0

[node name="WalkControls" type="Control" parent="Controls"]
margin_top = -3.61965
margin_right = 104.0
margin_bottom = 60.3804

[node name="TextureRect" type="TextureRect" parent="Controls/WalkControls"]
margin_left = 16.0
margin_top = 32.0
margin_right = 40.0
margin_bottom = 56.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Controls/WalkControls"]
margin_left = 64.0
margin_top = 32.0
margin_right = 88.0
margin_bottom = 56.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="Controls/WalkControls"]
margin_left = 40.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 56.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="Controls/WalkControls"]
margin_left = 40.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Controls/WalkControls"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = 22.0
margin_right = 24.0
margin_bottom = 52.0
custom_colors/font_color = Color( 0.654902, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Walk"

[node name="WalkControls2" type="Control" parent="Controls"]
margin_top = 80.918
margin_right = 104.0
margin_bottom = 144.918

[node name="TextureRect" type="TextureRect" parent="Controls/WalkControls2"]
margin_left = 16.0
margin_top = 13.0
margin_right = 88.0
margin_bottom = 42.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Controls/WalkControls2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = 5.61436
margin_right = 84.0
margin_bottom = 35.6144
custom_colors/font_color = Color( 0.654902, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Dash/Roll Dice"

[node name="WalkControls3" type="Control" parent="Controls"]
margin_top = 142.646
margin_right = 104.0
margin_bottom = 206.646

[node name="TextureRect" type="TextureRect" parent="Controls/WalkControls3"]
margin_left = 30.0
margin_top = 13.0
margin_right = 71.0
margin_bottom = 36.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Controls/WalkControls3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = 4.0
margin_right = 24.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.654902, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Exit"

[node name="HitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -15.0
pitch_scale = 1.02

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 13 )]
autoplay = false

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="." method="_on_ExitButton_mouse_exited"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
